--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -1,1 +1,26 @@
+name: Docker
 
+on:
+  workflow_call: 
+
+jobs:
+
+  docker:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: ['ubuntu-latest']
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Docker build
+      uses: docker/setup-buildx-action@v3.6.1
+
+
+    - name: Docker Login 
+      uses: docker/login-action@v3.3.0
+      with: 
+        username: wandersonlls 
+        password: ${{ DOCKER_PWD }}
+
+          
