--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -23,4 +23,11 @@ jobs:
         username: wandersonlls 
         password: ${{ secrets.DOCKER_PWD }}
 
-          
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v6.7.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: wandersonlls/go_ci:${{github.ref_name}}
+
