--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -16,7 +16,11 @@ jobs:
     - name: Set up Docker build
       uses: docker/setup-buildx-action@v3.6.1
 
-
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.1.8
+      with:
+        name: software_go
+      
     - name: Docker Login 
       uses: docker/login-action@v3.3.0
       with: 
