--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,7 +50,7 @@ jobs:
       run: go build -v main.go
 
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.2.0-node20
+      uses: actions/upload-artifact@v4
       with:
         name: software_go
         path: main
